gobmkida/c3/autohelperowl_defendpat362
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/autohelperowl_defendpat362/src/patterns/owl_defendpat.c:5395:30: error: use of undeclared identifier 'invalid_operation'
return !( ( v10 + v11 < 0) ^ __OFADD__( v10, v11) | ( v10 + v11 == 0)); 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/autohelperowl_defendpat362/src/patterns/owl_defendpat.c:5182:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/autohelperowl_defendpat362/src/obj/3/owl_defendpat.o] Error 1
